--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -8,6 +8,6 @@ api-version: '1.21'
 depend: [WorldGuard, LuckPerms]
 commands:
   blockban:
-    description: Reload Config.yml
-    usage: /<command>
-    permission: BlockBan.ReloadConfig
+    description:
+    usage: /<command> <text> 
+    permission: BlockBan.Admin
